<resources>
    <!-- Global -->
    <string name="app_name">Recipe N Grocery</string>
    <string name="global_header_steps">Cara Masak</string>
    <string name="global_header_ingredients">Bahan Baku</string>
    <string name="global_content_description_image">Recipe Image</string>
    <string name="global_menu_settings">Settings</string>
    <string name="global_menu_edit">Edit</string>
    <string name="global_action_servings">Porsi</string>

    <!-- Main Activity -->
    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Mater</string>
    <string name="nav_header_subtitle">Recipe and shopping mate</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_menu_shoppingList">Shopping List</string>
    <string name="nav_menu_settings">Settings</string>
    <string name="main_dialog_delete">Permanently delete</string>
    <string name="main_text_no_recipes">No recipes</string>
    <string name="main_text_no_recipes_instructions">Add a new recipe with the + button!</string>

    <!-- Add Recipe Activity -->
    <string name="add_recipe_header">Add new recipe</string>
    <string name="add_recipe_header_edit">Edit recipe</string>
    <string name="add_recipe_button_save">Save Recipe</string>
    <string name="add_recipe_button_add_ingredient">Add</string>
    <string name="add_recipe_button_add_step">Add</string>
    <string name="add_recipe_button_select_image">Select Image</string>
    <string name="add_recipe_button_cancel">Cancel</string>
    <string name="add_recipe_hint_title">Title…</string>
    <string name="add_recipe_hint_description">Short description…</string>
    <string name="add_recipe_hint_ingredient_name">Name…</string>
    <string name="add_recipe_hint_ingredient_amount">Amount…</string>
    <string name="add_recipe_hint_step">Describe the step…</string>
    <string name="add_recipe_hint_servings">0</string>
    <string name="add_recipe_dialog_discard_changes">Discard changes?</string>
    <string name="add_recipe_text_no_image_selected">No image selected</string>

    <!-- Recipe Detail Activity -->
    <string name="recipe_detail_text_no_ingredients">No items set!</string>
    <string name="recipe_detail_header_ingredient_instructions">Tick ingredients you already have in the pantry. This will sync to your shopping list!</string>

    <!-- Shopping List Activity -->
    <string name="shoppingListMenu_sort">Sort</string>

    <!-- Settings -->
    <string name="settings_activity_title">Settings</string>
    <!-- Display preferences -->
    <string name="settings_display_header">Display</string>
    <string name="setting_default_units">Default units</string>
    <!-- Notification Preferences -->
    <string name="settings_notifications_header">Meal Reminders</string>
    <string name="setting_notifications_on">Enable reminders</string>
    <string name="setting_notifications_breakfast">Breakfast reminder</string>
    <string name="setting_notifications_lunch">Lunch reminder</string>
    <string name="setting_notifications_dinner">Dinner reminder</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum Punya Akun?</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="ex_email">Ex Email</string>
    <string name="konf_password">Konfirmasi Password</string>
    <string name="sudah_punya_akun">Sudah Punya Akun?</string>

</resources>
